--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -31,7 +31,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Logo</a>
+      <a class="navbar-brand" href="#"><img src="/public/images/logo2.png" alt = "logo" style = "width:50px;height:50px;""/a></a>
     </div>
     <div>
       <div class="collapse navbar-collapse" id="myNavbar">
@@ -53,10 +53,9 @@
 
 <div id="section1" class="container-fluid">
   <h1><center>Hello Test!</center></h1>
-    <div
-      data-preset="stripe"
+    <div class= "ldBar label-center"
+      data-preset="fan"
       data-fill-background= "f99"
-      class="ldBar label-center"
       data-transition-in = "35"
       data-value="35"
       style="width:70%;height:50%;margin:auto"
