--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -21,7 +21,7 @@
 
 <body class="text-center">
   <form class="form-signin" method="post">
-    <img class="mb-4" src="logo.jpg" alt="" width="72" height="72">
+    <img class="mb-4" src="../images/logo.png" alt="" width="72" height="72">
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
     <label for="inputEmail" class="sr-only">Username</label>
     <input name="username" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
