--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -61,9 +61,12 @@
       <center>Hello Test!</center>
     </h1>
     <div class="progress">
-      <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40"
-        aria-valuemin="0" aria-valuemax="100" style="width:60%">
-        40%
+      <div
+        data-preset="energy"
+        class="ldBar label-center"
+        data-transition-in = "35"
+        data-value="35"
+      ></div>
       </div>
     </div>
   </div>
