--- a/public/pages/dashboard/dashboard.html
+++ b/public/pages/dashboard/dashboard.html
@@ -9,8 +9,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="loading-bar.css" />
+  <link rel="stylesheet" type="text/css" href="loading-bar.css"/>
   <script type="text/javascript" src="loading-bar.js"></script>
+  <div class="ldBar"></div>
   <script src="https://code.highcharts.com/highcharts.js"></script>
   <style>
     body {
