--- a/public/pages/dashboard/dashboard.html
+++ b/public/pages/dashboard/dashboard.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="loading-bar.css" />
-  <script type="text/javascript" src="loading-bar.js"></script>
+  <link rel="stylesheet" type="text/css" href="./loading-bar.css">
+  <script type="text/javascript" src="./loading-bar.js"></script>
   <script src="https://code.highcharts.com/highcharts.js"></script>
   <style>
     body {
@@ -35,7 +35,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-          <<<<<<< HEAD </button> <a class="navbar-brand" href="#">Logo</a>
+        </button> <a class="navbar-brand" href="#">Logo</a>
       </div>
       <div>
         <div class="collapse navbar-collapse" id="myNavbar">
@@ -68,6 +68,7 @@
     </div>
   </div>
 </body>
+
 </html>
 </button>
 
@@ -75,40 +76,40 @@
   <h1>Section 2</h1>
   <div <div id="container" style="width:100%; height:400px;"></div>
   <script>
-  try {
-    const fs = require('fs');
-    const fileContents = fs.readFileSync('./databases/people-data.json', 'utf8');
-    const data = JSON.parse(fileContents);
-    console.log(debts);
-  }catch(err){
-    console.log(err.message);
-  }
-  var debts = [{name: 'Debt Sources', colorByPoint: true, data: [{name: 'Chase Freedom Credit Card', y: 2500, sliced: true}, {name: 'Chase Sapphire Credit Card', y: 900}, {name: 'Car Loan', y: 9000}, {name: 'Student Loans', y: 15000}]}];
-  Highcharts.chart('container', {
-    chart: {
-      plotBackgroundColor: null,
-      plotBorderWidth: null,
-      plotShadow: false,
-      type: 'pie'
-    },
-    title: {
-      text: "Your Debt Sources"
-    },
-    tooltip: {
-      pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
-    },
-    plotOptions: {
-      pie: {
-        allowPointSelect: true,
-        cursor: 'pointer',
-        dataLabels: {
-          enabled: false
-        },
-        showInLegend: true
-      }
-    },
-    series: debts
-  });
+    try {
+      const fs = require('fs');
+      const fileContents = fs.readFileSync('./databases/people-data.json', 'utf8');
+      const data = JSON.parse(fileContents);
+      console.log(debts);
+    } catch (err) {
+      console.log(err.message);
+    }
+    var debts = [{ name: 'Debt Sources', colorByPoint: true, data: [{ name: 'Chase Freedom Credit Card', y: 2500, sliced: true }, { name: 'Chase Sapphire Credit Card', y: 900 }, { name: 'Car Loan', y: 9000 }, { name: 'Student Loans', y: 15000 }] }];
+    Highcharts.chart('container', {
+      chart: {
+        plotBackgroundColor: null,
+        plotBorderWidth: null,
+        plotShadow: false,
+        type: 'pie'
+      },
+      title: {
+        text: "Your Debt Sources"
+      },
+      tooltip: {
+        pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+      },
+      plotOptions: {
+        pie: {
+          allowPointSelect: true,
+          cursor: 'pointer',
+          dataLabels: {
+            enabled: false
+          },
+          showInLegend: true
+        }
+      },
+      series: debts
+    });
 
   </script>
 </div>
